<resources>
    <string name="app_name">Eco-V</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="garbage">Garbage</string>
    <string name="recycle">Recycle</string>
    <string name="green_waste">Green Waste</string>
    <string name="no_special_events_for_this_month">No special events for this month</string>
    <string name="enter_e_mail_address">Enter e-mail address</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="you_are_not_registered">You are not registered ?</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="international">International</string>
    <string name="local">Local</string>
    <string name="eco_news">ECO-NEWS</string>
    <string name="_305_1_2_i_jothipala_mawatha">305, 1/2 I Jothipala Mawatha</string>
    <string name="_167_7_f_new_kandy_rd">167/7/F New Kandy Rd</string>
    <string name="kalia_narail">Kalia,Narail</string>
    <string name="n0_110_3_new_kandy_road_kekirideniya_road_kaduwela_10640">N0.110/3, New Kandy Road Kekirideniya Road, Kaduwela 10640</string>
    <string name="_163_new_kandy_road_malabe_101115">163 New Kandy Road Malabe 101115</string>
    <string name="_102_g2_b263_kaduwela">102/G2 B263,Kaduwela</string>
    <string name="glass">Glass</string>
    <string name="household_waste">Household waste</string>
    <string name="other_inorganic">Other inorganic</string>
    <string name="other_organic">Other organic</string>
    <string name="polythene">Polythene</string>
    <string name="paper">Paper</string>
    <string name="food">Food</string>
    <string name="plastic">Plastic</string>

    <string name="the_day_before">The day before</string>
    <string name="s">Select the collections for which you want to receive a reminder and the time you want to receive the reminder(s)</string>
    <string name="reminders">Reminders</string>
    <string name="_1_select_the_reminder_time">1. Select the reminder time:</string>
    <string name="_3_type_of_waste">3.Type of waste:</string>
    <string name="_2_time">2. Time:</string>
    <string name="address">Address:</string>
    <string name="issue">Issue:</string>
    <string name="city">City:</string>
    <string name="name">Name :</string>
    <string name="report_your_waste_issues">Report your waste issues</string>
    <string name="e_mail">E-mail:</string>
    <string name="contact_no">Contact No:</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password2">Enter password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="search">Search</string>
    <string name="enter_your_city_name">Enter your city name</string>
    <string name="when_is_next_collection_day">When is next collection day?</string>

    <string name="on_the_day_itself">On the day itself</string>


    <string name="ok">OK</string>
    <string name="day_count">Day count</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="select_date">Select date</string>
    <string name="clear">Clear</string>
    <string name="try_adjust">Try adjusting filters or take a look at our suggestions for places nearby!</string>
    <string name="night_count">%d Night</string>
    <string name="nights_count">Total count: %d</string>


</resources>
