<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#677779"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_buton_2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textColorHint="#836F60"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_buton_2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_address"
        android:inputType="textPostalAddress"
        android:textColorHint="#836F60"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_buton_2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:textColorHint="#836F60"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_buton_2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="#836F60"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_buton_2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="#836F60"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSignUpSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_recrangle"
        android:text="@string/sign_up"
        android:textColor="#D50000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

</LinearLayout>