<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DAC8C8"
    tools:context=".News">


    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/eco_news"
        android:textColor="@color/MyColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNews1"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="5dp"
        android:background="#00C853"
        android:text="@string/local"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNews2"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="5dp"
        android:background="#00C853"
        android:text="@string/international"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>