<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OurLocation">


    <TextView
        android:id="@+id/etLocation1"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@color/MyColor"
        android:clickable="false"

        android:drawableRight="@drawable/location"
        android:drawablePadding="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"

        android:paddingBottom="10dp"
        android:text="@string/_102_g2_b263_kaduwela"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etLocation2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@color/MyColor"
        android:clickable="false"

        android:drawableRight="@drawable/location"
        android:drawablePadding="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"

        android:paddingBottom="10dp"
        android:text="@string/_163_new_kandy_road_malabe_101115"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etLocation3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@color/MyColor"
        android:clickable="false"

        android:drawableRight="@drawable/location"
        android:drawablePadding="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"

        android:paddingBottom="10dp"
        android:text="@string/n0_110_3_new_kandy_road_kekirideniya_road_kaduwela_10640"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etLocation4"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@color/MyColor"
        android:clickable="false"

        android:drawableRight="@drawable/location"
        android:drawablePadding="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"

        android:paddingBottom="10dp"
        android:text="@string/kalia_narail"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etLocation5"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@color/MyColor"
        android:clickable="false"

        android:drawableRight="@drawable/location"
        android:drawablePadding="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"

        android:paddingBottom="10dp"
        android:text="@string/_167_7_f_new_kandy_rd"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etLocation6"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/MyColor"

        android:clickable="false"
        android:drawableRight="@drawable/location"
        android:drawablePadding="100dp"
        android:paddingLeft="20dp"

        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:text="@string/_305_1_2_i_jothipala_mawatha"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>