<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomePage"

    tools:showIn="@layout/app_bar_home_page">

    <technolifestyle.com.imageslider.FlipperLayout
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="200dp">



    </technolifestyle.com.imageslider.FlipperLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:text="Add something"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:gravity="center"
            android:text="@string/when_is_next_collection_day"
            android:textColor="@color/CYAN"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText5"
                android:layout_width="274dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_your_city_name"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/MyColor"
                android:text="@string/search" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
